# Task-manager

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pici.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.json
task_manager/: logging_formatters.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: test_data.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labelmodel_name.py  0002_rename_labelmodel_label.py
task_manager/management/commands/: add_test_data.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_statusmodel_status.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  (+9 more)
task_manager/templates/: base.html  form.html  home.html  list.html  login.html
task_manager/tests/: test_filter.py  test_labels_crud.py  test_statuses_crud.py  test_tasks_crud.py  test_users_crud.py  testing_functions.py
task_manager/tests_playwright/: test_end2end.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
templates/: base.html  home.html  index.html  login.html
templates/components/: footer.html  language_selector.html  messages.html  navigation.html
templates/labels/: form.html  list.html
templates/statuses/: delete.html  form.html  list.html
templates/tasks/: delete.html  form.html  list.html
templates/users/: create.html  delete.html  form.html  list.html  update.html
tests/: mixins.py  test_ivan.py  test_labels_crud.py  test_statuses_crud.py  test_tasks_crud.py  test_tasks_crude.py  test_users_crud.py  test_users_crude.py  tests_func.py
(+21 files in other folders)
